--- a/swap.html
+++ b/swap.html
@@ -6,26 +6,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        div{
+*{
+    box-sizing: border-box;
+    margin:0;
+    padding:0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+        .container{
+            border:2px solid green;
+            height:100vh;
+            display: grid;
+            grid-template-columns: repeat(1,2fr 1fr);
+
+        }
+
+        .main,.side,.video,.comment{
             border:2px solid black;
-            height:20em;
-            width:30em;
+        }
+
+
+        .side{
+            /* display: flex; */
+            display: grid;
+            grid-auto-flow: row;
+            /* flex-direction: column; */
+            max-height:40em;
+            overflow:auto;
+            border:2px solid red;
+            
+        }
+
+        .video{
+            /* flex:1; */
+        }
+        .comment{
+            /* flex:1; */
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="box1">One</div>
-        <div class="box2">Two</div>
-        <div class="box3">Three</div>
+        <div class="main"></div>
+        <div class="side">
+            <div class="video"></div>
+            <div class="comment"></div>
+        </div>
+        <!-- <div class="box3">Three</div> -->
     </div>
 
     <script>
-        let box1=document.querySelector(".box1")
-        let box2=document.querySelector(".box2")
-        let box3=document.querySelector(".box3")
+        // let box1=document.querySelector(".box1")
+        // let box2=document.querySelector(".box2")
+        // let box3=document.querySelector(".box3")
 
-        box3.replace(box1)
+        // box3.replace(box1)
     </script>
 </body>
 </html>
